fix: future warning

--- a/main.ipynb
+++ b/main.ipynb
@@ -93,23 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\felip\\AppData\\Local\\Temp\\ipykernel_88300\\1323206550.py:15: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[coluna].fillna(\"Desconhecido\", inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def pre_process(df):\n",
     "    \"\"\"\n",
@@ -120,15 +106,16 @@
     "    \"\"\"\n",
     "    for coluna in df.columns:\n",
     "        if df[coluna].dtype in [\"float64\", \"int64\"]:  \n",
-    "            df[coluna].fillna(df[coluna].mean(), inplace=True)\n",
+    "            df[coluna] = df[coluna].fillna(df[coluna].mean())  \n",
     "        elif df[coluna].dtype == \"object\":\n",
     "            if df[coluna].nunique() == 2:\n",
-    "                df[coluna] = df[coluna].map({df[coluna].unique()[0]: 0, df[coluna].unique()[1]: 1}).fillna(df[coluna])\n",
+    "                valores = df[coluna].unique()\n",
+    "                df[coluna] = df[coluna].map({valores[0]: 0, valores[1]: 1}).fillna(df[coluna])\n",
     "            else:\n",
-    "                df[coluna].fillna(\"Desconhecido\", inplace=True)\n",
+    "                df[coluna] = df[coluna].fillna(\"Desconhecido\")  \n",
     "    return df\n",
     "\n",
-    "df = pre_process(df)"
+    "df = pre_process(df)\n"
    ]
   },
   {
