--- a/main.ipynb
+++ b/main.ipynb
@@ -127,22 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "OneHotEncoder.__init__() got an unexpected keyword argument 'sparse'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[0;32m     28\u001b[0m colunas_categoricas \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m---> 29\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43monehotencoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolunas_categoricas\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[17], line 13\u001b[0m, in \u001b[0;36monehotencoder\u001b[1;34m(df, colunas_categoricas)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21monehotencoder\u001b[39m(df, colunas_categoricas):\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m    Aplica OneHotEncoding às colunas categóricas especificadas no DataFrame.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;124;03m        pd.DataFrame: Um novo DataFrame com as colunas categóricas codificadas e as demais mantidas.\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m     encoder \u001b[38;5;241m=\u001b[39m \u001b[43mOneHotEncoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43msparse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdrop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfirst\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m  \n\u001b[0;32m     15\u001b[0m     encoded_arrays \u001b[38;5;241m=\u001b[39m encoder\u001b[38;5;241m.\u001b[39mfit_transform(df[colunas_categoricas])\n\u001b[0;32m     17\u001b[0m     encoded_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\n\u001b[0;32m     18\u001b[0m         encoded_arrays,\n\u001b[0;32m     19\u001b[0m         columns\u001b[38;5;241m=\u001b[39mencoder\u001b[38;5;241m.\u001b[39mget_feature_names_out(colunas_categoricas),\n\u001b[0;32m     20\u001b[0m         index\u001b[38;5;241m=\u001b[39mdf\u001b[38;5;241m.\u001b[39mindex\n\u001b[0;32m     21\u001b[0m     )\n",
-      "\u001b[1;31mTypeError\u001b[0m: OneHotEncoder.__init__() got an unexpected keyword argument 'sparse'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def onehotencoder(df, colunas_categoricas):\n",
     "    \"\"\"\n",
@@ -156,7 +143,7 @@
     "        pd.DataFrame: Um novo DataFrame com as colunas categóricas codificadas e as demais mantidas.\n",
     "    \"\"\"\n",
     "    \n",
-    "    encoder = OneHotEncoder(sparse=False, drop=\"first\")  \n",
+    "    encoder = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False, drop=\"first\")  \n",
     "    \n",
     "    encoded_arrays = encoder.fit_transform(df[colunas_categoricas])\n",
     "    \n",
@@ -172,7 +159,7 @@
     "    return df\n",
     "\n",
     "colunas_categoricas = []\n",
-    "# df = onehotencoder(df, colunas_categoricas)"
+    "df = onehotencoder(df, colunas_categoricas)"
    ]
   },
   {
