--- a/main.ipynb
+++ b/main.ipynb
@@ -174,7 +174,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = df.drop(columns=[\"Renda per Capita\"])\n",
+    "y = df[\"Renda per Capita\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"\\nAvaliação do Modelo:\")\n",
+    "print(f\"MSE: {mse:.2f}, R2: {r2:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
