feat: add plots

--- a/main.ipynb
+++ b/main.ipynb
@@ -204,7 +204,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(y_test, y_pred, color=\"blue\", label=\"Previsões\")\n",
+    "plt.plot([min(y_test), max(y_test)], [min(y_test), max(y_test)], color=\"red\", label=\"Ideal\")\n",
+    "plt.xlabel(\"Valores Reais\")\n",
+    "plt.ylabel(\"Previsões\")\n",
+    "plt.title(\"Regressão Linear - Renda per Capita\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
